# usgs-daily-streamflow-percentiles

./: .gitattributes  .gitignore  README.md  index.md  main.py  main1.py  pyproject.toml  requirements.txt  test.md
.github/workflows/: run-daily.yml
.ipynb_checkpoints/: index-checkpoint.md  main-checkpoint.py  usgs_api_key-checkpoint.txt
data/daily/: USGS-05490600_2026-03-30.csv  USGS-05490600_2026-03-31.csv  USGS-05490600_2026-04-01.csv  USGS-05490600_2026-04-02.csv  USGS-05490600_2026-04-03.csv  USGS-05490600_2026-04-04.csv  USGS-05490600_2026-04-05.csv  USGS-05490600_2026-04-06.csv  USGS-05490600_2026-04-07.csv  USGS-05490600_2026-04-08.csv  USGS-05490600_2026-04-09.csv  USGS-05490600_2026-04-10.csv  USGS-05490600_2026-04-11.csv  USGS-05490600_2026-04-12.csv  USGS-05490600_2026-04-13.csv  USGS-05490600_2026-04-14.csv  USGS-05490600_2026-04-15.csv  USGS-05490600_2026-04-16.csv  USGS-05490600_2026-04-17.csv  USGS-05490600_2026-04-18.csv  USGS-05490600_2026-04-19.csv  USGS-05490600_2026-04-20.csv  USGS-05490600_2026-04-21.csv  USGS-05490600_2026-04-22.csv  USGS-05490600_2026-04-23.csv  USGS-05490600_2026-04-24.csv  USGS-05490600_2026-04-25.csv  USGS-05490600_2026-04-26.csv  USGS-05490600_2026-04-27.csv  USGS-05490600_2026-04-28.csv  USGS-05490600_2026-04-29.csv  USGS-05490600_2026-04-30.csv  USGS-05490600_2026-05-01.csv  USGS-05490600_2026-05-02.csv  USGS-05490600_2026-05-03.csv  USGS-05490600_2026-05-04.csv  USGS-05490600_2026-05-05.csv  USGS-05490600_2026-05-06.csv  USGS-05495000_2026-03-30.csv  (+8481 more)
src/: functions.py  helper_fxns.py  main.py  main1.py  map_fxns.py
(+20 files in other folders)
